--- a/relinksys/web/src/app/report/sale-report/sale-report.component.html
+++ b/relinksys/web/src/app/report/sale-report/sale-report.component.html
@@ -263,7 +263,7 @@
                                                                 (click)="exportAsXLSXMaster()">
                                                             </i>
                                                             <button class="bg_none ms-4 me-2"
-                                                                (click)="print('sale-content')">
+                                                                (click)="generateManualPdfTable()">
                                                                 <i class="far fa-file-pdf "
                                                                     style="color: #1a1e90;font-size: 22px;cursor: pointer;">
                                                                 </i>
