--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -1421,11 +1421,11 @@
                         mat-raised-button color="primary">
                         Credit Note
                     </button>
-                    <span *ngIf="this.company.ID == 84">
+                    <span *ngIf="this.company.ID == 10000000">
                         <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="CreditPDF == ''" (click)="sendCreditWhatsappMessageInBackground()" class="whatsapp ms-lg-4 me-lg-4 ms-3 me-3"><i class="fa-brands fa-whatsapp"></i></button>
                     </span>
                    
-                    <span *ngIf="this.company.ID != 84">
+                    <span *ngIf="this.company.ID != 10000000">
                         <button type="button" *ngIf="this.company.WhatsappMsg == 'true' " [disabled]="CreditPDF == ''" (click)="sendWhatsapp('credit')" class="whatsapp ms-lg-4 me-lg-4 ms-3 me-3"><i class="fa-brands fa-whatsapp"></i></button>
                     </span>
                     
