--- a/relinksys/web/src/app/report/vendor-credit/vendor-credit.component.html
+++ b/relinksys/web/src/app/report/vendor-credit/vendor-credit.component.html
@@ -268,9 +268,9 @@
                                     </div>
                                 </div>
                             </mat-tab>
-                            <!-- <mat-tab label="Supplier Due Amonut">
+                             <mat-tab label="Customer Credit Note">
                                 <div class="body">
-                                    <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getVendorDuePayment()">
+                                    <form class="p-3 pb-0" #f3="ngForm" (ngSubmit)="customernote()">
                                         <div class="row">
                                             <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0 paddingInp">
@@ -287,34 +287,23 @@
                                                         [disabled]="!editSupplierCreditReport" />
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
-                                                <mat-form-field class="example-full-width mb-0">
-                                                    <mat-label>Supplier Name</mat-label>
-                                                    <mat-select name="Supplier" [(ngModel)]="data1.SupplierID"
-                                                        editable="true" #singleSelect>
-                                                        <mat-option [value]="0">All</mat-option>
-                                                        <mat-option *ngFor="let sup of supplierList  let i = index;"
-                                                            [value]="sup.ID">
-                                                            {{sup.Name}}<span style="float: right;">{{sup.MobileNo1}}
-                                                            </span>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width">
+                                                    <mat-label>Customer Name</mat-label>
+                                                    <input type="text" placeholder="serach customer" aria-label="Text"
+                                                        matInput name="CustomerID" [formControl]="myControl1"
+                                                        [matAutocomplete]="auto"
+                                                        (input)="customerSearch(myControl1.value, 'Name','Customer')">
+                                                    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                                                        <mat-option (click)="CustomerSelection('All','0')"
+                                                            value='All'>All</mat-option>
+                                                        <mat-option (click)="CustomerSelection('BillMaster',option2.ID)"
+                                                            *ngFor="let option2 of filteredOptions"
+                                                            [value]="option2.Name">
+                                                            {{option2.Name}} {{option2.MobileNo1}}
                                                         </mat-option>
-                                                    </mat-select>
-                                                    <mat-error>
-                                                        Select Supplier
-                                                    </mat-error>
+                                                    </mat-autocomplete>
                                                 </mat-form-field>
-                                                <!-- <mat-form-field class="example-full-width">
-                                                <mat-label>Supplier Name</mat-label>
-                                                <input type="text" placeholder="serach customer" aria-label="Text" matInput
-                                                name="SupplierID"  [formControl]="myControl" [matAutocomplete]="auto"
-                                                       (input)="customerSearch(myControl.value, 'Name','Supplier')">
-                                                <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" >
-                                                  <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
-                                                  <mat-option (click)="CustomerSelection('data1',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
-                                                    {{option.Name}} {{option.MobileNo1}}
-                                                  </mat-option>
-                                                </mat-autocomplete>
-                                              </mat-form-field> 
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
                                                 <mat-form-field class="example-full-width mb-0"
@@ -362,21 +351,18 @@
                                                 <thead>
                                                     <tr style="white-space: nowrap;">
                                                         <th>S.No</th>
-                                                        <th>SupplierName</th>
-                                                        <th>InvoiceNo</th>
-                                                        <th>PurchaseDate</th>
-                                                        <th>Quantity</th>
-                                                        <th>SubTotal</th>
-                                                        <th>DiscountAmount</th>
-                                                        <th>GSTAmount</th>
-                                                        <th>TotalAmount</th>
-                                                        <th>DueAmount</th>
-                                                        <th>PaidAmount</th>
-                                                        <th>PaymentStatus</th>
-                                                        <th>ShopName</th>
+                                                         <th>CreditDate</th>
+                                                        <th >CreditNumber</th>
+                                                        <th >CustomerName</th>
+                                                        <th >Shop</th>
+                                                        <th >Amount</th>
+                                                        <th >PaidAmount(Used)</th>
+                                                        <th >Balance(Not Used)</th>
+                                                        <th >Remark</th>
+                                                    
                                                     </tr>
                                                     <tr class="totolRow "
-                                                        *ngIf="this.dataList1 != null && this.dataList1 != ''">
+                                                        *ngIf="this.dataList2 != null && this.dataList2 != ''">
                                                         <td>
                                                             <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
                                                                 aria-hidden="true" type="button"
@@ -396,39 +382,33 @@
                                                         <td></td>
                                                         <td></td>
                                                         <td></td>
-                                                        <td>{{this.totalQtyD}}</td>
-                                                        <td>{{this.totalSubTotalD}}</td>
-                                                        <td>{{this.totalDiscountD}}</td>
-                                                        <td>{{this.totalGstAmountD}}</td>
-                                                        <td>{{this.totalAmountD}}</td>
-                                                        <td>{{this.totalDueAmountD}}</td>
-                                                        <td>{{this.totalPaidAmountD}}</td>
                                                         <td></td>
+                                                        <td>{{this.totalAmount2}}</td>
+                                                        <td>{{this.totalPaidAmount2}}</td>
+                                                        <td>{{this.totalBalance2}}</td>
                                                         <td></td>
+                                                       
                                                     </tr>
                                                 </thead>
                                                 <tbody class="text-center">
-                                                    <tr *ngFor="let data of dataList1; let i = index" text="left">
+                                                    <tr *ngFor="let data of dataList2; let i = index" text="left">
                                                         <td>{{ i + 1 }}</td>
-                                                        <td>{{data.SupplierName}}</td>
-                                                        <td>{{data.InvoiceNo}}</td>
-                                                        <td>{{dateFormat(data.PurchaseDate)}}</td>
-                                                        <td>{{data.Quantity}}</td>
-                                                        <td>{{data.SubTotal}}</td>
-                                                        <td>{{data.DiscountAmount}} </td>
-                                                        <td>{{data.GSTAmount}}</td>
-                                                        <td>{{data.TotalAmount}}</td>
-                                                        <td>{{data.DueAmount}} </td>
-                                                        <td>{{data.TotalAmount - data.DueAmount}}</td>
-                                                        <td>{{data.PaymentStatus}}</td>
-                                                        <td>{{data.ShopName}}</td>
+                                                        <td>{{dateFormat(data.CreditDate)}}</td>
+                                                        <td>{{data.CreditNumber}}</td>
+                                                        <td>{{data.CustomerName}}</td>
+                                                        <td>{{data.ShopName}} {{data.AreaName}}</td>
+                                                        <td>{{data.Amount}}</td>
+                                                        <td>{{data.PaidAmount}}</td>
+                                                        <td>{{data.Amount - data.PaidAmount}}</td>
+                                                        <td>{{data.Remark}}</td>
+                                                     
                                                     </tr>
                                                 </tbody>
                                             </table>
                                         </div>
                                     </div>
                                 </div>
-                            </mat-tab> -->
+                            </mat-tab> 
                         </mat-tab-group>
                     </div>
                 </div>
