--- a/relinksys/web/src/app/sale/billing/billing.component.html
+++ b/relinksys/web/src/app/sale/billing/billing.component.html
@@ -2166,7 +2166,7 @@
                                 </ng-template>
                                 <ng-template #contentN role="document" let-modal>
     <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
-        <h2 class="modal-title header pt-2" id="exampleModalLabel">Supplier Credit Note </h2>
+        <h2 class="modal-title header pt-2" id="exampleModalLabel">Customer Credit Note </h2>
         <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
             (click)="modal.dismiss('Cross click')"></button>
     </div>
@@ -3012,7 +3012,7 @@
                                     </ng-template>
                                     <ng-template #contentN role="document" let-modal>
     <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
-        <h2 class="modal-title header pt-2" id="exampleModalLabel">Supplier Credit Note </h2>
+        <h2 class="modal-title header pt-2" id="exampleModalLabel">Customer Credit Note </h2>
         <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
             (click)="modal.dismiss('Cross click')"></button>
     </div>
@@ -3565,7 +3565,7 @@
                                 </ng-template>
                                 <ng-template #contentN role="document" let-modal>
     <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
-        <h2 class="modal-title header pt-2" id="exampleModalLabel">Supplier Credit Note </h2>
+        <h2 class="modal-title header pt-2" id="exampleModalLabel">Customer Credit Note </h2>
         <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
             (click)="modal.dismiss('Cross click')"></button>
     </div>
