--- a/relinksys/web/src/app/report/customer-return/customer-return.component.html
+++ b/relinksys/web/src/app/report/customer-return/customer-return.component.html
@@ -75,7 +75,7 @@
                                                     <input type="text" placeholder="serach customer" aria-label="Text"
                                                         matInput name="CustomerID" [formControl]="myControl"
                                                         [matAutocomplete]="auto"
-                                                        (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                                                        (input)="customerSearch(myControl.value, 'Name','Customer')">
                                                     <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
                                                         <mat-option (click)="CustomerSelection('All','0')"
                                                             value='All'>All</mat-option>
